--- a/index.html/index.html
+++ b/index.html/index.html
@@ -10,9 +10,9 @@
 
 	<title>Crystal Collector</title>
 
-	<link rel="stylesheet" type="text/css" href="C:\Users\owner\week-4-game\assets\style.css\reset.css\reset.css">
+	<link rel="stylesheet" type="text/css" href=".\assets\style.css\reset.css\reset.css">
 
-	<link rel="stylesheet" type="text/css" href="C:\Users\owner\week-4-game\assets\style.css\style.css">
+	<link rel="stylesheet" type="text/css" href="..\assets\style.css\style.css">
 
 </head>
 
@@ -90,13 +90,13 @@
 
 	<div class="gems">
 
-		<img src="C:\Users\owner\week-4-game\assets\images\blue[2].png" class=gemImage id="one" alt="Blue Gem">
+		<img src="..\assets\images\blue.png" class=gemImage id="one" alt="Blue Gem">
 
-		<img src="C:\Users\owner\week-4-game\assets\images\green[1].png" class=gemImage id="two" alt="Green Gem">
+		<img src="..\assets\images\green[1].png" class=gemImage id="two" alt="Green Gem">
 
-		<img src="C:\Users\owner\week-4-game\assets\images\red[1].png" class=gemImage id= "three" alt="Red Gem">
+		<img src="..\assets\images\red[1].png" class=gemImage id= "three" alt="Red Gem">
 
-		<img src="C:\Users\owner\week-4-game\assets\images\yellow[1].png" class=gemImage id= "four" alt="Yellow Gem">
+		<img src="..\assets\images\yellow[1].png" class=gemImage id= "four" alt="Yellow Gem">
 
 	</div>
 
@@ -112,7 +112,7 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 
-	<script type="text/javascript" src="assets/javascript/javascript.js"></script>
+	<script type="text/javascript" src="../assets/game.js/game.js"></script>
 
 </body>
 
