--- a/index.html/index.html
+++ b/index.html/index.html
@@ -10,7 +10,7 @@
 
 	<title>Crystal Collector</title>
 
-	<link rel="stylesheet" type="text/css" href=".\assets\style.css\reset.css\reset.css">
+	<link rel="stylesheet" type="text/css" href="..\assets\style.css\reset.css\reset.css">
 
 	<link rel="stylesheet" type="text/css" href="..\assets\style.css\style.css">
 
